# NosferatuGame

./: README.md
TP3_Nosferatu/: Battle.cpp  Battle.h  Being.cpp  Being.h  BoardFile.cpp  BoardFile.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Cell.cpp  Cell.h  Cliff.cpp  Cliff.h  CostMatrices.cpp  CostMatrices.h  Cross.cpp  Cross.h  DictNode.cpp  DictNode.h  Dictionary.cpp  Dictionary.h  Element.cpp  Element.h  FileManager.cpp  FileManager.h  Floyd.cpp  Floyd.h  Game.cpp  Game.h  Gotoxy.h  HolyWater.cpp  HolyWater.h  Human.cpp  Human.h  Hunter.cpp  Hunter.h  Identifier.cpp  Identifier.h  Inventory.cpp  Inventory.h  (+67 more)
TP3_Nosferatu_Graphic_Interface/: Actions.cpp  Actions.h  Background.cpp  Background.h  Battle.cpp  Battle.h  Being.cpp  Being.h  BoardFile.cpp  BoardFile.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Cell.cpp  Cell.h  Cliff.cpp  Cliff.h  CostMatrices.cpp  CostMatrices.h  Cross.cpp  Cross.h  DictNode.cpp  DictNode.h  Dictionary.cpp  Dictionary.h  Element.cpp  Element.h  FileManager.cpp  FileManager.h  Floyd.cpp  Floyd.h  Game.cpp  Game.h  Gotoxy.h  GraphicMenu.cpp  GraphicMenu.h  GraphicOptions.cpp  GraphicOptions.h  HolyWater.cpp  HolyWater.h  (+75 more)
